test/fail/internal/correct_dynaload_rewind.lily
#[
SyntaxError: Cannot anonymously call resulting type 'List[Function (A)]'.
    from correct_dynaload_rewind.lily:6:
]#

[print]("")
